<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/secondary"
    android:layout_marginTop="15dp"
    android:paddingEnd="10dp"
    tools:ignore="RtlSymmetry">

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/date"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/barrier1"
        />

    <TextView
        android:id="@+id/tv_paid_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/paid_amount"
        android:textColor="@color/green"
        android:textSize="11sp"
        app:layout_constraintEnd_toStartOf="@+id/barrier1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="tv_date,tv_paid_amount" />

    <TextView
        android:id="@+id/line"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:background="@color/green"
        android:textColor="@color/green"
        app:layout_constraintStart_toEndOf="@+id/barrier1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_expense_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/full_name"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/barrier"
        app:layout_constraintStart_toEndOf="@+id/line"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_expense_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/category"
        android:textColor="#85000000"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/barrier"
        app:layout_constraintStart_toEndOf="@+id/line"
        app:layout_constraintTop_toBottomOf="@+id/tv_expense_name"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="start"
        android:layout_marginEnd="5dp"
        app:constraint_referenced_ids="tv_total,tv_total_amount,tv_due_amount" />

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:padding="5dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_total_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/balance_shape"
        android:paddingTop="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:gravity="center"
        android:text="@string/rs_money"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/tv_total" />

    <TextView
        android:id="@+id/tv_due_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:text="@string/balance_amount"
        android:textColor="@color/btn"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/tv_total_amount"
        tools:ignore="TextContrastCheck,TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>